# dtmm

./: .gitignore  README.rst  pyproject.toml
dtmm/: __init__.py  conf.py  fft.py  field_viewer.py  mode.py  transfer.py
examples/3D/: cholesteric_lens.py
